header and nav menu creation.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title></title>
+    <title>LuxNote</title>
 </head>
 <body>
+    <header class="header-bg">
+        <div class="header">
+            <h1 class="title"><a href="./index.html">LuxNote</a></h1>
+            <nav aria-label="primary">
+                <ul class="header-menu">
+                    <li><a href="./laptops.html">Laptops</a></li>
+                    <li><a href="./insurance.html">insurance</a></li>
+                    <li><a href="./contacts.html">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <img classa="img" src="./img/icones/rastreador.svg" alt="">
 
     <script src="./script.js"></script>
 </body>
