doing the main and style

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
     </header>
 
 
+    <main class="intro-bg">
+        <div class="intro">
+            <div class="intro-content">
+                <h1>Laptops Tailored for You<span>.</span></h1>
+                <p>High-performance and precision-crafted laptops, customized to fit your needs. Experience the best in speed and efficiency with TechCraft.</p>
+                <a href="./laptops.html">choose yours</a>
+            </div>
+                <img src="./img/fotos/notebook7.jpg" alt="Gray Laptop on the table">
+        </div>
+    </main>
+
     <script src="./script.js"></script>
 </body>
 </html>
