--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>LuxNote</title>
 </head>
 <body>
     <header class="header-bg">
         <div class="header">
-            <h1 class="title"><a href="./index.html">LuxNote</a></h1>
+            <h1 class="title font-1 c_w"><a href="./index.html">LuxNote</a></h1>
             <nav aria-label="primary">
-                <ul class="header-menu">
-                    <li><a href="./laptops.html">Laptops</a></li>
-                    <li><a href="./insurance.html">insurance</a></li>
-                    <li><a href="./contacts.html">Contacts</a></li>
+                <ul class="header-menu font-1-m">
+                    <li><a class="c_w font-1" href="./laptops.html">Laptops</a></li>
+                    <li><a class="c_w font-1" href="./insurance.html">insurance</a></li>
+                    <li><a class="c_w font-1" href="./contacts.html">Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -24,13 +27,17 @@
     <main class="intro-bg">
         <div class="intro">
             <div class="intro-content">
-                <h1>Laptops Tailored for You<span>.</span></h1>
-                <p>High-performance and precision-crafted laptops, customized to fit your needs. Experience the best in speed and efficiency with TechCraft.</p>
-                <a href="./laptops.html">choose yours</a>
+                <h1 class="font-1-xxl c_w">Laptops Tailored for You<span class="sc">.</span></h1>
+                <p class="font-2-l c_p">High-performance and precision-crafted laptops, customized to fit your needs. Experience the best in speed and efficiency with TechCraft.</p>
+                <a class="button g_b g_bg" href="./laptops.html">choose yours</a>
             </div>
+            <div>
                 <img src="./img/fotos/notebook7.jpg" alt="Gray Laptop on the table">
+            </div>
         </div>
     </main>
+
+
 
     <script src="./script.js"></script>
 </body>
