commiting the last part of homepage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header-bg">
-        <div class="header">
+        <div class="header container">
             <h1 class="title font-1 c_w"><a href="./index.html">LuxNote</a></h1>
             <nav aria-label="primary">
                 <ul class="header-menu font-1-m">
@@ -25,10 +25,10 @@
 
 
     <main class="intro-bg">
-        <div class="intro">
+        <div class="intro container">
             <div class="intro-content">
                 <h1 class="font-1-xxl c_w">Laptops Tailored for You<span class="sc">.</span></h1>
-                <p class="font-2-l c_p">High-performance and precision-crafted laptops, customized to fit your needs. Experience the best in speed and efficiency with TechCraft.</p>
+                <p class="font-2-l c-p">High-performance and precision-crafted laptops, customized to fit your needs. Experience the best in speed and efficiency with TechCraft.</p>
                 <a class="button g_b g_bg" href="./laptops.html">choose yours</a>
             </div>
             <div>
@@ -37,7 +37,57 @@
         </div>
     </main>
 
+    <article class="laptop-list">
+        <h2 class="font-1-xxl container">Choose Yours<span class="sc">.</span></h2>
 
+        <ul>
+            <a href="./laptops/GrayLaptop.html">
+                <li>
+                    <img src="./img/fotos/notebook5.jpg" alt="" >
+                    <h3 class="font-1-xl">Gray Laptop</h3>
+                    <span class="font-2-m c-b-3">R$ 5199,00</span>
+                </li>
+            </a>
+            <a href="./laptops/silverLaptop.html">
+                <li>
+                    <img class="img-2" src="./img/fotos/notebook6.jpg" alt="" >
+                    <h3 class="font-1-xl">Silver Laptop</h3>
+                    <span class="font-2-m c-b-3">R$ 5599,00</span>
+                </li>
+            </a>
+            <a href="./laptops/goldLaptop.html">
+                <li>
+                    <img class="img-3" src="./img/fotos/notebook7.jpg" alt="" >
+                    <h3 class="font-1-xl">GoldLaptop</h3>
+                    <span class="font-2-m c-b-3">R$ 6199,00</span>
+                </li>
+            </a>
+        </ul>
+    </article>
+
+    <article class="tech-bg">
+        <div class="tech container">
+            <div class="tech-content">
+                <span class="font-2-l-b c-b-5">Advanced Technology</span>
+                <h2 class="font-1-xxl c_w">you choose what color do you want<span class="sc">.</span></h2>
+                <p class="font-2-l c-b-5">Each laptop has a unique identity. The measures are exactly what you need to work or play, technology and the desing perfect for you. It's ensured that the best confort and ergonomics when you are using. You can modify the colors and the inside. It's up to you.</p>
+                <a class="button g_b g_bg link" href="./laptops.html">Choose your style</a>
+                <div>
+                    <img src="./img/icones/eletrica.svg" alt="">
+                    <h3 class="font-1-m c-b-7">Save Energy</h3>
+                    <p class="font-2-s c-b-4">All of them have the best thecnology and has a battery that can be use for 18hs. It takes just 3 hours to fully charge the battery. Great to use every place and time.</p>
+                </div>
+                <div>
+                    <img src="./img/icones/rastreador.svg" alt="">
+                    <h3 class="font-1-m c-b-7">Tracker</h3>
+                    <p class="font-2-s c-b-4">The advanced tracker system that comes in your new machine, it's really powerfull and are fast, you can track in seconds. The track system is developed for us and has the best for you!</p>
+                </div>
+            </div>
+            <div class="tech-img">
+                <img src="./img/fotos/notebook4.jpg" alt="">
+            </div>
+        </div>
+    </article>
 
     <script src="./script.js"></script>
 </body>
