page update, css and homepage

--- a/index.html
+++ b/index.html
@@ -71,16 +71,18 @@
                 <span class="font-2-l-b c-b-5">Advanced Technology</span>
                 <h2 class="font-1-xxl c_w">you choose what color do you want<span class="sc">.</span></h2>
                 <p class="font-2-l c-b-5">Each laptop has a unique identity. The measures are exactly what you need to work or play, technology and the desing perfect for you. It's ensured that the best confort and ergonomics when you are using. You can modify the colors and the inside. It's up to you.</p>
-                <a class="button g_b g_bg link" href="./laptops.html">Choose your style</a>
-                <div>
-                    <img src="./img/icones/eletrica.svg" alt="">
-                    <h3 class="font-1-m c-b-7">Save Energy</h3>
-                    <p class="font-2-s c-b-4">All of them have the best thecnology and has a battery that can be use for 18hs. It takes just 3 hours to fully charge the battery. Great to use every place and time.</p>
-                </div>
-                <div>
-                    <img src="./img/icones/rastreador.svg" alt="">
-                    <h3 class="font-1-m c-b-7">Tracker</h3>
-                    <p class="font-2-s c-b-4">The advanced tracker system that comes in your new machine, it's really powerfull and are fast, you can track in seconds. The track system is developed for us and has the best for you!</p>
+                <a class="link" href="./laptops.html">Choose your style</a>
+                <div class="tech-adv">
+                    <div>
+                        <img src="./img/icones/eletrica.svg" alt="">
+                        <h3 class="font-1-m c-b-7">Save Energy</h3>
+                        <p class="font-2-s c-b-4">All of them have the best thecnology and has a battery that can be use for 18hs. It takes just 3 hours to fully charge the battery. Great to use every place and time.</p>
+                    </div>
+                    <div>
+                        <img src="./img/icones/rastreador.svg" alt="">
+                        <h3 class="font-1-m c-b-7">Tracker</h3>
+                        <p class="font-2-s c-b-4">The advanced tracker system that comes in your new machine, it's really powerfull and are fast, you can track in seconds. The track system is developed for us and has the best for you!</p>
+                    </div>
                 </div>
             </div>
             <div class="tech-img">
@@ -88,6 +90,32 @@
             </div>
         </div>
     </article>
+
+    <section class="partners" aria-label="Our Partners">
+        <h2 class="font-1-xxl container">our partners<span class="sc">.</span></h2>
+        <ul>
+            <li><img src="./img/parceiros/caravan.svg" alt="caravan"></li>
+            <li><img src="./img/parceiros/dogs.svg" alt="dogs"></li>
+            <li><img src="./img/parceiros/flexblog.svg" alt="flexblog"></li>
+            <li><img src="./img/parceiros/handel.svg" alt="handel"></li>
+            <li><img src="./img/parceiros/lescone.svg" alt="lescone"></li>
+            <li><img src="./img/parceiros/ranek.svg" alt="ranek"></li>
+            <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
+            <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+        </ul>
+    </section>
+
+    <section class="testimony">
+        <div>
+            <img src="./img/testimony/test1.jpg" alt="person using the laptop 1">
+        </div>
+        <div class="testimony-content">
+            <blockquote>
+                <p></p>
+            </blockquote>
+            <span></span>
+        </div>
+    </section>
 
     <script src="./script.js"></script>
 </body>
