commiting laptop page css

--- a/laptops.html
+++ b/laptops.html
@@ -31,18 +31,16 @@
             <p class="font-2-l-b c_w" >Choose the best for you</p>
             <h1 class="font-1-xxl c_w">Our Laptops<span class="sc">.</span></h1>
         </div>
-
     </div>
-    <div class="laptos-bg">
         <div class="laptops container">
-            <div class="laptos-img">
+            <div class="laptops-img">
                 <img src="./img/fotos/notebook.png" alt="silver laptop">
                 <span class="font-2-m c_w">U$ 5199,00</span>
             </div>
             <div class="laptops-content">
                 <h2 class="font-1-xl">Silver Laptop</h2>
                 <p class="font-2-s c-b-6">"Experience top-tier performance with LuxNote's ultra-fast, lightweight laptop – perfect for work, gaming, and creativity."</p>
-                <ul>
+                <ul class="font-2-s">
                     <li>
                         <img src="./img/icones/velocidade.svg" alt="">
                         High-Performance Processor
@@ -60,20 +58,21 @@
                         Built-in Security & Tracking
                     </li>
                 </ul>
+                <a class="button g_b g_bg" href="./laptops/gold.html">More about</a>
             </div>
         </div>>
-    </div>
 
-    <div class="laptos-bg">
+
+    <div class="laptop-bg">
         <div class="laptops container">
-            <div class="laptos-img">
+            <div class="laptops-img">
                 <img src="./img/fotos/notebook2.jpg" alt="silver laptop">
-                <span class="font-2-m c_w">U$ 5199,00</span>
+                <span class="font-2-m c_w">U$ 5599,00</span>
             </div>
             <div class="laptops-content">
                 <h2 class="font-1-xl c_w">Gray Laptop</h2>
                 <p class="font-2-s c-b-6">"Experience top-tier performance with LuxNote's ultra-fast, lightweight laptop – perfect for work, gaming, and creativity."</p>
-                <ul class="c_w">
+                <ul class="font-2-s c_w">
                     <li>
                         <img src="./img/icones/velocidade.svg" alt="">
                         High-Performance Processor
@@ -91,20 +90,21 @@
                         Built-in Security & Tracking
                     </li>
                 </ul>
+                <a class="button g_b g_bg" href="./laptops/gold.html">More about</a>
             </div>
         </div>>
     </div>
 
-    <div class="laptos-bg">
+
         <div class="laptops container">
-            <div class="laptos-img">
-                <img src="./img/fotos/notebook3.jpg" alt="silver laptop">
-                <span class="font-2-m c_w">U$ 5199,00</span>
+            <div class="laptops-img">
+                <img src="./img/fotos/notebook3.jpg" alt="Gold laptop">
+                <span class="font-2-m c_w">U$ 6199,00</span>
             </div>
             <div class="laptops-content">
                 <h2 class="font-1-xl">Gold Laptop</h2>
                 <p class="font-2-s c-b-6">"Experience top-tier performance with LuxNote's ultra-fast, lightweight laptop – perfect for work, gaming, and creativity."</p>
-                <ul>
+                <ul class="font-2-s">
                     <li>
                         <img src="./img/icones/velocidade.svg" alt="">
                         High-Performance Processor
@@ -122,9 +122,10 @@
                         Built-in Security & Tracking
                     </li>
                 </ul>
+                <a class="button g_b g_bg" href="./laptops/gold.html">More about</a>
             </div>
         </div>>
-    </div>
+
 </main>
 
 
