commiting the silver laptop page and css

--- a/insurance.html
+++ b/insurance.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Insurance - LuxNote</title>
 </head>
-<body>
+<body id="insurance">
     <header class="header-bg">
         <div class="header container">
             <h1 class="title font-1-xxl c_w"><a href="./index.html">LuxNote</a></h1>
@@ -29,7 +29,7 @@
     <div class="title-bg ">
         <div class="title container">
             <p class="font-2-l-b c_w" >Choose your Insurance</p>
-            <h1 class="font-1-xxl c_w">Your always safe<span class="sc">.</span></h1>
+            <h1 class="font-1-xxl c_w">You always safe<span class="sc">.</span></h1>
         </div>
     </div>
         <div class="insurance">
@@ -60,6 +60,103 @@
             </div>
         </div>
 </main>
+
+<article class="advantage-bg">
+    <div class="advantage container">
+        <h2 class="font-1-xxl c_w">Choose Yours<span class="sc">.</span></h2>
+        <ul>
+            <li>
+                <img src="./img/icones/eletrica.svg" alt="">
+                <h3 class="font1-l c_w">Support</h3>
+                <p class="font-2-s c_w">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, deleniti. Inventore animi pariatur ipsa in
+                    fugiat eligendi modi, fugit quo et neque nam quod explicabo similique accusantium molestiae optio autem!
+                </p>
+            </li>
+
+            <li>
+                <img src="./img/icones/carbono.svg" alt="">
+                <h3 class="font1-l c_w">carbono</h3>
+                <p class="font-2-s c_w">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, deleniti. Inventore animi pariatur ipsa in
+                    fugiat eligendi modi, fugit quo et neque nam quod explicabo similique accusantium molestiae optio autem!
+                </p>
+            </li>
+
+            <li>
+                <img src="./img/icones/sustentavel.svg" alt="">
+                <h3 class="font1-l c_w">sustainable</h3>
+                <p class="font-2-s c_w">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, deleniti. Inventore animi pariatur ipsa in
+                    fugiat eligendi modi, fugit quo et neque nam quod explicabo similique accusantium molestiae optio autem!
+                </p>
+            </li>
+
+            <li>
+                <img src="./img/icones/rastreador.svg" alt="">
+                <h3 class="font1-l c_w">Tracker</h3>
+                <p class="font-2-s c_w">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, deleniti. Inventore animi pariatur ipsa in
+                    fugiat eligendi modi, fugit quo et neque nam quod explicabo similique accusantium molestiae optio autem!
+                </p>
+            </li>
+
+            <li>
+                <img src="./img/icones/seguro.svg" alt="">
+                <h3 class="font1-l c_w">Insurance</h3>
+                <p class="font-2-s c_w">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, deleniti. Inventore animi pariatur ipsa in
+                    fugiat eligendi modi, fugit quo et neque nam quod explicabo similique accusantium molestiae optio autem!
+                </p>
+            </li>
+
+            <li>
+                <img src="./img/icones/velocidade.svg" alt="">
+                <h3 class="font1-l c_w">Fast</h3>
+                <p class="font-2-s c_w">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, deleniti. Inventore animi pariatur ipsa in
+                    fugiat eligendi modi, fugit quo et neque nam quod explicabo similique accusantium molestiae optio autem!
+                </p>
+            </li>
+        </ul>
+
+    </div>
+
+</article>
+
+<article class="question container">
+    <h2 class="font-1-xxl">FAQ<span class="sc">.</span></h2>
+    <dl>
+        <div>
+            <dt class="font-1-m-b">Lorem ipsum dolor sit amet consectetur.</dt>
+            <dd class="font-2-s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sequi incidunt explicabo inventore debitis possimus excepturi commodi, expedita optio labore dicta nostrum sed suscipit est ea earum facilis deleniti sint.</dd>
+        </div>
+        <div>
+            <dt class="font-1-m-b">Lorem ipsum dolor sit amet consectetur.</dt>
+            <dd class="font-2-s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sequi incidunt explicabo inventore debitis possimus excepturi commodi, expedita optio labore dicta nostrum sed suscipit est ea earum facilis deleniti sint.</dd>
+        </div>
+        <div>
+            <dt class="font-1-m-b">Lorem ipsum dolor sit amet consectetur.</dt>
+            <dd class="font-2-s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sequi incidunt explicabo inventore debitis possimus excepturi commodi, expedita optio labore dicta nostrum sed suscipit est ea earum facilis deleniti sint.</dd>
+        </div>
+        <div>
+            <dt class="font-1-m-b">Lorem ipsum dolor sit amet consectetur.</dt>
+            <dd class="font-2-s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sequi incidunt explicabo inventore debitis possimus excepturi commodi, expedita optio labore dicta nostrum sed suscipit est ea earum facilis deleniti sint.</dd>
+        </div>
+        <div>
+            <dt class="font-1-m-b">Lorem ipsum dolor sit amet consectetur.</dt>
+            <dd class="font-2-s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sequi incidunt explicabo inventore debitis possimus excepturi commodi, expedita optio labore dicta nostrum sed suscipit est ea earum facilis deleniti sint.</dd>
+        </div>
+        <div>
+            <dt class="font-1-m-b">Lorem ipsum dolor sit amet consectetur.</dt>
+            <dd class="font-2-s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sequi incidunt explicabo inventore debitis possimus excepturi commodi, expedita optio labore dicta nostrum sed suscipit est ea earum facilis deleniti sint.</dd>
+        </div>
+        <div>
+            <dt class="font-1-m-b">Lorem ipsum dolor sit amet consectetur.</dt>
+            <dd class="font-2-s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sequi incidunt explicabo inventore debitis possimus excepturi commodi, expedita optio labore dicta nostrum sed suscipit est ea earum facilis deleniti sint.</dd>
+        </div>
+    </dl>
+</article>
 
 
     <footer class="footer-bg">
