--- a/laptops.html
+++ b/laptops.html
@@ -58,7 +58,7 @@
                         Built-in Security & Tracking
                     </li>
                 </ul>
-                <a class="button arrow g_b g_bg" href="./laptops/gold.html">More about</a>
+                <a class="button arrow g_b g_bg" href="./laptops/silver.html">More about</a>
             </div>
         </div>>
 
@@ -90,7 +90,7 @@
                         Built-in Security & Tracking
                     </li>
                 </ul>
-                <a class="button arrow g_b g_bg" href="./laptops/gold.html">More about</a>
+                <a class="button arrow g_b g_bg" href="./laptops/gray.html">More about</a>
             </div>
         </div>>
     </div>
