commiting new laptop pages

--- a/laptops/gold.html
+++ b/laptops/gold.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Silver Laptop - LuxNote</title>
+    <title>Gold Laptop - LuxNote</title>
 </head>
 <body id="laptops">
     <header class="header-bg">
@@ -28,15 +28,15 @@
 <main class="title-bg">
     <div>
         <div class="title container">
-            <p class="font-2-xl c_w" >U$ 5199,00</p>
-            <h1 class="font-1-xxl c_w">Silver<span class="sc">.</span></h1>
+            <p class="font-2-xl c_w" >U$ 6199,00</p>
+            <h1 class="font-1-xxl c_w">Gold<span class="sc">.</span></h1>
         </div>
     </div>
     <div class="laptop container">
         <div class="laptop-img">
+            <img src="../img/fotos/notebook3.jpg" alt="">
             <img src="../img/fotos/notebook.png" alt="">
             <img src="../img/fotos/notebook2.jpg" alt="">
-            <img src="../img/fotos/notebook3.jpg" alt="">
         </div>
         <div class="laptop-content">
             <p class="font-2-l c_w">
@@ -100,10 +100,10 @@
                 <span class="font-2-m c-b-3">U$ 5199,00</span>
             </li>
         </a>
-        <a href="./gold.html">
+        <a href="./silver.html">
             <li>
                 <img class="img-3" src="../img/fotos/notebook3.jpg" alt="" >
-                <h3 class="font-1-xl">Gold Laptop</h3>
+                <h3 class="font-1-xl">Silver Laptop</h3>
                 <span class="font-2-m c-b-3">U$ 6199,00</span>
             </li>
         </a>
