--- a/laptops/gray.html
+++ b/laptops/gray.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Silver Laptop - LuxNote</title>
+    <title>Gray Laptop - LuxNote</title>
 </head>
 <body id="laptops">
     <header class="header-bg">
@@ -28,8 +28,8 @@
 <main class="title-bg">
     <div>
         <div class="title container">
-            <p class="font-2-xl c_w" >U$ 5199,00</p>
-            <h1 class="font-1-xxl c_w">Silver<span class="sc">.</span></h1>
+            <p class="font-2-xl c_w" >U$ 5599,00</p>
+            <h1 class="font-1-xxl c_w">Gray<span class="sc">.</span></h1>
         </div>
     </div>
     <div class="laptop container">
@@ -93,10 +93,10 @@
     <h2 class="font-1-xxl container">Choose Yours<span class="sc">.</span></h2>
 
     <ul>
-        <a href="./gray.html">
+        <a href="./silver.html">
             <li>
-                <img src="../img/fotos/notebook.png" alt="" >
-                <h3 class="font-1-xl">Gray Laptop</h3>
+                <img src="../img/fotos/notebook2.jpg" alt="" >
+                <h3 class="font-1-xl">Silver Laptop</h3>
                 <span class="font-2-m c-b-3">U$ 5199,00</span>
             </li>
         </a>
