comiting the style change and new pages

--- a/insurance.html
+++ b/insurance.html
@@ -18,7 +18,7 @@
                 <ul class="header-menu font-1-m">
                     <li><a class="c_w font-1" href="./laptops.html">Laptops</a></li>
                     <li><a class="c_w font-1" href="./insurance.html">insurance</a></li>
-                    <li><a class="c_w font-1" href="./contacts.html">Contacts</a></li>
+                    <li><a class="c_w font-1" href="./contact.html">Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -183,7 +183,7 @@
                 <nav class="font-1-m c-b-5">
                     <li><a class="c_w font-1" href="./laptops.html">Laptops</a></li>
                     <li><a class="c_w font-1" href="./insurance.html">insurance</a></li>
-                    <li><a class="c_w font-1" href="./contacts.html">Contacts</a></li>
+                    <li><a class="c_w font-1" href="./contact.html">Contacts</a></li>
                     <li><a class="c_w font-1" href="./terms.html">terms and conditions</a></li>
                 </nav>
             </div>
