commiting store css

--- a/contact.html
+++ b/contact.html
@@ -79,30 +79,38 @@
     <h2 class="font-1-xxl">Store Location</h2>
     <div class="store-item">
         <img src="./img/lojas/sp.jpg" alt="map stopre">
+        <div class="store-content">
+            <h3 class="font-1-xl">New York</h3>
+            <div class="store-data font-2-s">
+                <p>2450, Tech Valley Road, Suite 500,</p>
+                <p>New York, NY 10001, USA</p>
+            </div>
         <div class="store-data font-2-s">
-            <p>2450, Tech Valley Road, Suite 500,</p>
-            <p>New York, NY 10001, USA</p>
-        </div>
-        <div>
             <a href="mailto:support@luxnot.com">support@luxnot.com</a>
             <a href="tell:+1999999999">+1 999 999 999</a>
+            
         </div>
-        <p><img src="./img/icones/horario.svg" alt="">08 AM - 06 PM monday to Sunday</p>
+        <p class="store-time font-1-s"><img src="./img/icones/horario.svg" alt="">08 AM - 06 PM monday to Sunday</p>
+    </div>
+</div>
+
+        <div class="store-item">
+            <img src="./img/lojas/sp.jpg" alt="map stopre">
+            <div class="store-content">
+                <h3 class="font-1-xl">New York</h3>
+                <div class="store-data font-2-s">
+                    <p>2450, Tech Valley Road, Suite 500,</p>
+                    <p>New York, NY 10001, USA</p>
+                </div>
+            <div class="store-data font-2-s">
+                <a href="mailto:support@luxnot.com">support@luxnot.com</a>
+                <a href="tell:+1999999999">+1 999 999 999</a>
+                
+            </div>
+            <p class="store-time font-1-s"><img src="./img/icones/horario.svg" alt="">08 AM - 06 PM monday to Sunday</p>
+        </div>
     </div>
 
-
-    <div class="store-item">
-        <img src="./img/lojas/rj.jpg" alt="map stopre">
-        <div class="store-data font-2-s">
-            <p>2450, Tech Valley Road, Suite 500,</p>
-            <p>New York, NY 10001, USA</p>
-        </div>
-        <div>
-            <a href="mailto:support@luxnot.com">support@luxnot.com</a>
-            <a href="tell:+1999999999">+1 999 999 999</a>
-        </div>
-        <p><img src="./img/icones/horario.svg" alt="">08 AM - 06 PM monday to Sunday</p>
-    </div>
 </article>
 
 
