commiting budget page

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Contatcs - LuxNote</title>
 </head>
-<body>
+<body id="contacts">
     <header class="header-bg">
         <div class="header container">
             <h1 class="title font-1-xxl c_w"><a href="./index.html">LuxNote</a></h1>
@@ -25,7 +25,7 @@
     </header>
 
 
-<main id="contacts">
+<main>
     <div class="title-bg ">
         <div class="title container">
             <p class="font-2-l-b c_w" >24 Hours Suport</p>
