--- a/budget.html
+++ b/budget.html
@@ -35,8 +35,8 @@
             <h1 class="font-1-xxl c_w">Quote in your email<span class="sc">.</span></h1>
         </div>
     </div>
-    <form class="budget container c_w" action="./">
-        <div class="budget-product">
+    <form class="budget container" action="./">
+        <div class="budget-product c_w">
             <h2 class="font-1-xs">Laptop or Insurance?</h2>
 
             <input type="radio" name="type" value="luxnote" id="luxnote">
@@ -53,6 +53,64 @@
                 <h2 class="font-1-l">Choose Yours plan</h2>
             </div>
 
+        </div>
+        <div class="budget-data form b">
+
+            <h2 class="font-1-s col-2">Personal info</h2>
+
+            <div>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="Your name">
+            </div>
+
+            <div>
+                <label for="surname">Surname</label>
+                <input type="text" id="name" name="name" placeholder="Your surname">
+            </div>
+
+            <div class="col-2">
+                <label for="Id">Id</label>
+                <input type="text" id="name" name="name" placeholder="000 000 000">
+            </div>
+
+            <div class="col-2">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Your email">
+            </div>
+
+            <h2 class="font-1-s col-2 b">Shipping</h2>
+
+            <div>
+                <label for="zip_code">Zip Code</label>
+                <input type="text" id="zip_code" name="zip_code">
+            </div>
+
+            <div>
+                <label for="number">Number</label>
+                <input type="text" id="number" name="number">
+            </div>
+
+            <div>
+                <label for="public_place">Public place</label>
+                <input type="text" id="public_place" name="public_place">
+            </div>
+
+            <div>
+                <label for="neighborhood">Neighborhood</label>
+                <input type="text" id="neighborhood" name="neighborhood">
+            </div>
+
+            <div>
+                <label for="city">City</label>
+                <input type="text" id="city" name="city">
+            </div>
+
+            <div>
+                <label for="state">State</label>
+                <input type="text" id="state" name="state">
+            </div>
+
+            <button class="button g_b g_bg col-2">Request quote</button>
         </div>
     </form>
 </main>
