commiting new changes on css and html budget

--- a/budget.html
+++ b/budget.html
@@ -40,17 +40,33 @@
             <h2 class="font-1-xs">Laptop or Insurance?</h2>
 
             <input type="radio" name="type" value="luxnote" id="luxnote">
-            <label for="laptops">Laptops</label>
+            <label for="luxnote">Laptops</label>
 
             <input type="radio" name="type" value="insurance" id="insurance">
             <label for="insurance">Insurance</label>
 
             <div class="budget-content" id="budget-laptop">
-                <h2 class="font-1-l">Choose Yours (Laptop)</h2>
+                <h2 class="font-1-xs">Choose Yours (Laptop)</h2>
+
+                <input type="radio" name="product" value="silver" id="silver">
+                <label for="silver">Silver Laptop <span> U$ 5199,00</span></label>
+
+                <input type="radio" name="product" value="gray" id="gray">
+                <label for="gray">Gray Laptop <span> U$ 5599,00</span></label>
+
+                <input type="radio" name="product" value="gold" id="gold">
+                <label for="gold">Gold Laptop <span> U$ 6199,00</span></label>
             </div>
 
-            <div class="budget-insurance" id="budget-insurance">
-                <h2 class="font-1-l">Choose Yours plan</h2>
+            <div class="budget-content" id="budget-insurance">
+                <h2 class="font-1-xs">Choose Yours plan</h2>
+
+                <input type="radio" name="product" value="silver-plan" id="silver-plan">
+                <label for="silver-plan">Silver<span> U$ 99,99</span></label>
+
+                <input type="radio" name="product" value="gold-plan" id="gold-plan">
+                <label for="gold-plan">Gold<span> U$ 299,99</span></label>
+
             </div>
 
         </div>
