commiting the end of the page

--- a/budget.html
+++ b/budget.html
@@ -50,12 +50,39 @@
 
                 <input type="radio" name="product" value="silver" id="silver">
                 <label for="silver">Silver Laptop <span> U$ 5199,00</span></label>
+                <div class="budget-details">
+                    <ul class="font-1-xs">
+                        <li><img src="./img/icones/eletrica.svg" alt="">High-Performance Processor</li>
+                        <li><img src="./img/icones/carbono.svg" alt="">Ultra-Light Carbon Fiber Body</li>
+                        <li><img src="./img/icones/horario.svg" alt="">Up to 18 Hours Battery Life</li>
+                        <li><img src="./img/icones/rastreador.svg" alt="">Built-in Security & Tracking</li>
+                    </ul>
+                    <img src="./img/fotos/notebook.png" alt="">
+                </div>
 
                 <input type="radio" name="product" value="gray" id="gray">
                 <label for="gray">Gray Laptop <span> U$ 5599,00</span></label>
+                <div class="budget-details">
+                    <ul class="font-1-xs">
+                        <li><img src="./img/icones/eletrica.svg" alt="">High-Performance Processor</li>
+                        <li><img src="./img/icones/carbono.svg" alt="">Ultra-Light Carbon Fiber Body</li>
+                        <li><img src="./img/icones/horario.svg" alt="">Up to 18 Hours Battery Life</li>
+                        <li><img src="./img/icones/rastreador.svg" alt="">Built-in Security & Tracking</li>
+                    </ul>
+                    <img src="./img/fotos/notebook2.jpg" alt="">
+                </div>
 
                 <input type="radio" name="product" value="gold" id="gold">
                 <label for="gold">Gold Laptop <span> U$ 6199,00</span></label>
+                <div class="budget-details">
+                    <ul class="font-1-xs">
+                        <li><img src="./img/icones/eletrica.svg" alt="">High-Performance Processor</li>
+                        <li><img src="./img/icones/carbono.svg" alt="">Ultra-Light Carbon Fiber Body</li>
+                        <li><img src="./img/icones/horario.svg" alt="">Up to 18 Hours Battery Life</li>
+                        <li><img src="./img/icones/rastreador.svg" alt="">Built-in Security & Tracking</li>
+                    </ul>
+                    <img src="./img/fotos/notebook3.jpg" alt="">
+                </div>
             </div>
 
             <div class="budget-content" id="budget-insurance">
